# api-gateway/docs/swagger.yaml
@@ -88,6 +88,24 @@ info:
   version: "1.0"
 paths:
   /orders:
+    get:
+      description: Return all orders
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.OrderResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Get orders
+      tags:
+      - Orders
     post:
       consumes:
       - application/json
