# api-gateway/internal/adapter/http/router/routes.go
@@ -17,6 +17,7 @@ func RegisterProductRoutes(rg *gin.RouterGroup, h *handler.ProductHandler) {
 func RegisterOrderRoutes(rg *gin.RouterGroup, h *handler.OrderHandler) {
 	orders := rg.Group("/orders")
 	{
+		orders.GET("", h.GetOrders)
 		orders.GET("/:id", h.GetOrder)
 		orders.POST("", h.CreateOrder)
 	}
